# rk-deviceio

./: .cproject  .project  CMakeLists.txt
DeviceIO/: CMakeLists.txt
DeviceIO/bluetooth/: bluetooth.h
DeviceIO/bluetooth/bluez/: avrcpctrl.cpp  avrcpctrl.h  bluez_ctrl.cpp  bluez_ctrl.h  bluez_manager_1s2.cpp  bt_hal.cpp  gatt_client.c  gatt_client.h  gatt_config.c  gatt_config.h  obex_client.h
DeviceIO/bluetooth/bluez/a2dp_source/: a2dp_masterctrl.cpp  a2dp_masterctrl.h  agent.c  gatt.c  gatt.h
DeviceIO/bluetooth/bluez/bluez_alsa_client/: ctl-client.cpp  rfcomm_msg.cpp  rfcomm_msg.h
DeviceIO/bluetooth/bluez/gdbus/: client.c
DeviceIO/bluetooth/bluez/spp_server/: spp_server.h
DeviceIO/bluetooth/bsa/: bluetooth_bsa.cpp  bluetooth_bsa.h
DeviceIO/bluetooth/bsa/broadcom/: app_av.cpp  app_avk.cpp  app_ble.cpp  app_ble_client.cpp  app_ble_client_db.cpp  app_ble_client_xml.cpp  app_ble_rk_server.cpp  app_ble_rk_server.cpp-save-data  app_dg.cpp  app_disc.cpp  app_dm.cpp  app_hs.cpp  app_manager.cpp  app_mgt.cpp  app_pan.cpp  app_pbc.cpp  app_xml_param.cpp
DeviceIO/bluetooth/bsa/broadcom/include/: app_av.h  app_av_file_info.h  app_avk.h  app_ble.h  app_ble_client.h  app_ble_client_db.h  app_ble_rk_server.h  app_dg.h  app_hs.h  app_manager.h  app_pan.h  app_pbc.h
DeviceIO/bluetooth/bsa/cypress/: app_alsa.cpp  app_av.cpp  app_av_bcst.cpp  app_avk.cpp  app_ble.cpp  app_ble_client.cpp  app_ble_client_db.cpp  app_ble_client_xml.cpp  app_ble_rk_server.cpp  app_dg.cpp  app_disc.cpp  app_dm.cpp  app_hs.cpp  app_manager.cpp  app_pbc.cpp  app_playlist.cpp  app_utils.cpp  app_wav.cpp  app_xml_param.cpp  app_xml_utils.cpp  nanoxml.cpp
DeviceIO/bluetooth/bsa/cypress/include/: app_av.h  app_av_file_info.h  app_avk.h  app_ble.h  app_ble_client.h  app_ble_client_db.h  app_ble_rk_server.h  app_dg.h  app_hs.h  app_manager.h  app_pbc.h
DeviceIO/include/DeviceIo/: RkBtBase.h  RkBtHfp.h  VoicePrint.h
DeviceIO/src/: CMakeLists.txt
DeviceIO/src/linux/: DeviceIo.cpp  InfoLed.cpp  Logger.cpp  Logger.h  RK_log.cpp  RK_timer.cpp  Rk_audio.cpp  Rk_battery.cpp  Rk_key.cpp  Rk_led.cpp  Rk_shell.cpp  Rk_socket_app.c  Rk_system.cpp  Rk_wake_lock.c  SoundController.cpp  SoundController.h  Timer.cpp  Timer.h  WifiUtil.cpp  WifiUtil.h  key.cpp  key.h  led.h  led_pwm.cpp  led_test.cpp  power.cpp  power.h  rtc.cpp  rtc.h  shell.cpp  shell.h  wifi.cpp  wifi.h
DeviceIO/src/linux/encode/: RK_encode.cpp  gbk_to_utf8.cpp  gbk_to_utf8.h  utf8_to_gbk.cpp  utf8_to_gbk.h
DeviceIO/src/linux/netlink/: NetLinkWrapper.cpp  Rk_softap.cpp  TcpServer.cpp  TcpServer.h  UdpServer.cpp  UdpServer.h
DeviceIO/src/linux/netlink/test/: CMakeLists.txt  NetlinkTest.cpp
DeviceIO/src/linux/propity/: Properties.cpp  RK_property.cpp
DeviceIO/src/linux/voice_print/: _vp_kiss_fft_guts.h  voice_print.c  voice_print.h  vp_common.c  vp_common.h  vp_decode.c  vp_encode.c  vp_kiss_fft.c  vp_kiss_fft.h  vp_rscode.c  vp_rscode.h
DeviceIO/src/linux/wifi/: Hostapd.cpp  Hostapd.h  Rk_wifi.cpp  ScanResult.cpp  WifiInfo.cpp  WifiManager.cpp  ping.cpp  ping.h
DeviceIO/src/linux/wifi/test/: WifiManagerTest.cpp
DeviceIO/src/utility/: utility.c  utility.h
doc/: Rockchip_Developer_Guide_DeviceIo_Bluetooth_CN.md
librkmediaplayer/: CMakeLists.txt
librkmediaplayer/source/: CMakeLists.txt
librkmediaplayer/source/src/: RK_mediaplayer.c
librkmediaplayer/test/: CMakeLists.txt
test/: DeviceIOTest.cpp  bt_test.cpp
test/rk3326-wangyi-dictionary-pan/: rkbtsource.cpp
